--- a/src/pages/fans/fans.html
+++ b/src/pages/fans/fans.html
@@ -10,7 +10,7 @@
     <ion-list *ngFor="let item of Fans">
 		<ion-item>
 			<ion-thumbnail item-start>
-				<img [src]="item.attributes.image.attributes.url" *ngIf="item.attributes.image"/>
+				<img [src]="item.attributes.uIcon" *ngIf="item.attributes.uIcon"/>
 			</ion-thumbnail>
 			<h2>{{item.attributes.username}}</h2>
 		  </ion-item>
