--- a/src/pages/userInfo/userInfo.html
+++ b/src/pages/userInfo/userInfo.html
@@ -3,19 +3,39 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title></ion-title>
+        <ion-title>
+            {{username}}的资料
+        </ion-title>
     </ion-navbar>
 </ion-header>
-<ion-content class="card-background-page">
+<ion-content personal-page>
         <ion-card>
-            <img [src]="uicon"/>
+            <img [src]="basePath+'img/loading.gif'" [lazyImg]="uicon"/>
             <ion-card-content>
                 <ion-card-title>
-               {{username}}
+               <span icon-left>{{username}}</span>
+               <button ion-button outline (click)="toForce()" class="forcebtn">{{forceThen}}</button>
                 </ion-card-title>
-                <p>
-                
-                </p>
+                <ion-row>
+                    <ion-col>
+                        <button ion-button icon-left clear small>
+                            <ion-icon name="ios-happy" orange></ion-icon>
+                            <div gray>{{Fans}}位粉丝</div>
+                        </button>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button icon-left clear small>
+                            <ion-icon name="md-thumbs-up" orange></ion-icon>
+                            <div gray>4个点赞</div>
+                        </button>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button icon-left clear small>
+                            <ion-icon name="md-contacts" orange></ion-icon>
+                            <div gray>4条说说</div>
+                        </button>
+                      </ion-col>                   
+                  </ion-row>
             </ion-card-content>
         </ion-card>
 </ion-content>
